--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -73,6 +73,7 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   publish_dev_build:
     # if test failed, we should not publish
